# pinn-heat-1d

./: README.md  pyproject.toml  requirements.txt
data/: heat_data.py
deprecated/: heat_data_weak.py  heat_pinn_weak_torchquad.py
models/: heat_pinn.py  heat_pinn_strategy.py
notebooks/: 01_fundamentals.ipynb  02_strong_vs_weak_form.ipynb  heat_equation_Hard_vs_Soft.ipynb  heat_equation_modular.ipynb
tests/: test_data.py  test_integrators.py  test_model.py  test_strategies.py
training/: trainer.py  trainer_strategy.py
utils/: test_functions.py
