[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pinn-heat-1d"
version = "0.1.0"
description = "Benchmarking PINN optimization techniques for the 1D heat equation"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy",
    "matplotlib",
    "scipy",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]
notebooks = [
    "jupyter",
    "ipywidgets",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]